--- a/less/contact.less
+++ b/less/contact.less
@@ -1,30 +1,31 @@
-//contact
 
 .contact {
     .middle-cards(linear-gradient(white, rgb(224, 184, 228)));
     padding-top: 40px; 
     box-shadow: 2px 5px 20px;
     color: black;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+
     .contact-info {
         .colormix1();
         color:#b7a8c0;
-        margin-top: 50px;
+        margin-top: 10px;
         padding: 20px;
+        display: flex;
+        flex-direction: column;  
     }
     
     h5 {
-        .headings();
+        font-size:  2rem;
         color: black;
+        align-self: center;
     }
+
     p {
-        .sub-headings();
         display: flex;
         .centerflex();
         margin: 8px 0;
         color: black;
+
         a{ 
             padding: 10px;
             text-decoration: none;
