--- a/less/education.less
+++ b/less/education.less
@@ -22,7 +22,8 @@
 
     .edu{
         .each-card();
-        padding: 15px 0 3.5px 0;
+        margin-top: 18px;
+        padding: 15px 0 0px 0;
         height: 90%;
         display: flex;
         flex-direction: column;
