more mobile styling

--- a/less/variables.less
+++ b/less/variables.less
@@ -1,2 +1,7 @@
-@smallPhone: ~ "(min-width: 320px)";
+@smallPhone: ~ "(max-width: 320px)";
+@smallPhone2: ~ "(min-width: 375px)";
+@phone400: ~ "(min-width: 400px)";
+@phone500: ~ "(min-width: 500px)";
+@tablet800: ~ "(min-width: 800px )";
+@desktop: ~ "(min-width: 1024px )";
 @largeDesktop: ~ "(min-width: 1920px)";
