--- a/css/index.css
+++ b/css/index.css
@@ -20,20 +20,22 @@
   overflow: hidden;
   position: fixed;
   top: 0;
+  width: 95%;
+  justify-content: center;
+}
+.header .mob-nav nav {
   width: 100%;
+  display: flex;
+  justify-content: space-around;
 }
 .header .mob-nav nav a {
   background-image: linear-gradient(white, #e0b8e4);
   box-shadow: 2px 5px 20px;
   color: black;
-  justify-content: center;
-  align-items: center;
-  float: left;
-  display: block;
   text-align: center;
   text-decoration: none;
   font-size: 1rem;
-  padding: 3px 15.8px;
+  width: 100%;
 }
 .header .mob-nav .mob-nav a span:hover {
   color: #BC58F4;
@@ -66,6 +68,11 @@
 }
 .nav {
   display: none;
+}
+@media (min-width: 400px) {
+  .header .mob-nav nav a {
+    padding: 3px 25.4px;
+  }
 }
 .skills-section {
   background-image: linear-gradient(#e0b8e4, white);
@@ -251,7 +258,7 @@
   flex-direction: column;
 }
 .contact h5 {
-  font-size: 2rem;
+  font-size: 1.6rem;
   color: black;
   align-self: center;
 }
