--- a/less/contact.less
+++ b/less/contact.less
@@ -15,7 +15,7 @@
     }
     
     h5 {
-        font-size:  2rem;
+        font-size:  1.6rem;
         color: black;
         align-self: center;
     }
@@ -41,3 +41,35 @@
         justify-content: space-between;
     }
 }
+
+
+
+
+
+
+// //375 mobile
+// @media @smallPhone2 {
+//     .contact {
+        
+//         .contact-info {
+//         }
+        
+//         h5 {
+            
+//         }
+    
+//         p {
+            
+    
+//             a{ 
+               
+//             }
+//         }
+        
+//         .social-media {
+           
+//         }
+//     }
+    
+
+// }
