--- a/less/header.less
+++ b/less/header.less
@@ -1,25 +1,29 @@
 
 //header
 .header {
+    
     .bg();
     .mob-nav {
         display:flex;
         overflow: hidden;
         position: fixed;
         top: 0;
-        width: 100%;
+        width: 95%;
+        justify-content: center;
+
 
         nav {
-
+            width: 100%;
+            display: flex;
+            justify-content: space-around;
             a{
-             .colormix1();
-             .centerflex();
-             float: left;
-            display: block;
+                .colormix1();
             text-align: center;
              text-decoration: none;
              font-size: 1rem;
-             padding: 3px 15.8px;
+             width: 100%;
+             
+            
             }
         }
 
@@ -77,10 +81,66 @@
  
 
 
+ //375 mobile
+//  @media @smallPhone2 {
+//     .header {
+//         .mob-nav {
+    
+//             nav {
+    
+//                 a{
+                 
+//                 }
+//             }
+    
+//         .mob-nav a span:hover {
+               
+//             }
+//         }
+    
+//         .info-container {
+//           }
+//     }
+    
+//  } 
   
   
   
-  
+
+
+
+
+
+//400 phone
+@media @phone400 {
+    .header {
+        .mob-nav {
+    
+            nav {
+    
+                a{
+                 padding: 3px 25.4px;
+                }
+            }
+    
+        .mob-nav a span:hover {
+               
+            }
+        }
+    
+        .info-container {
+          }
+    }
+    
+ } 
+
+
+
+
+
+
+
+
 
 
 
