centered exp section, mobile

--- a/less/header.less
+++ b/less/header.less
@@ -111,28 +111,28 @@
 
 
 
-//400 phone
-@media @phone400 {
-    .header {
-        .mob-nav {
+// //400 phone
+// @media @phone400 {
+//     .header {
+//         .mob-nav {
     
-            nav {
+//             nav {
     
-                a{
-                 padding: 3px 25.4px;
-                }
-            }
+//                 a{
+                
+//                 }
+//             }
     
-        .mob-nav a span:hover {
+//         .mob-nav a span:hover {
                
-            }
-        }
+//             }
+//         }
     
-        .info-container {
-          }
-    }
+//         .info-container {
+//           }
+//     }
     
- } 
+//  } 
 
 
 
