--- a/css/index.css
+++ b/css/index.css
@@ -69,11 +69,6 @@
 .nav {
   display: none;
 }
-@media (min-width: 400px) {
-  .header .mob-nav nav a {
-    padding: 3px 25.4px;
-  }
-}
 .skills-section {
   background-image: linear-gradient(#e0b8e4, white);
   box-shadow: 2px 5px 20px;
@@ -183,6 +178,10 @@
 .experience .exper ul {
   width: 100%;
   color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .experience .exper ul li {
   padding-bottom: 5px;
