--- a/less/experience.less
+++ b/less/experience.less
@@ -42,6 +42,10 @@
         ul{
             width: 100%;
            color:black;
+           display: flex;
+           flex-direction: column;
+           justify-content: center;
+           align-items: center;
            li{
             padding-bottom: 5px;
             list-style-type: circle;
