--- a/less/Contact/contact.less
+++ b/less/Contact/contact.less
@@ -2,7 +2,7 @@
 .contact {
     .middle-cards(linear-gradient(white, rgb(224, 184, 228)));
     padding-top: 40px; 
-    box-shadow: 2px 5px 20px;
+    // box-shadow: 2px 5px 20px;
     color: black;
 
     .contact-info {
@@ -47,29 +47,3 @@
 
 
 
-// //375 mobile
-// @media @smallPhone2 {
-//     .contact {
-        
-//         .contact-info {
-//         }
-        
-//         h5 {
-            
-//         }
-    
-//         p {
-            
-    
-//             a{ 
-               
-//             }
-//         }
-        
-//         .social-media {
-           
-//         }
-//     }
-    
-
-// }
