--- a/less/index.less
+++ b/less/index.less
@@ -6,10 +6,36 @@
 
 
 //Components
-@import 'container';
-@import 'header';
-@import 'skills';
-@import 'experience';
-@import 'education';
-@import 'contact';
+@import './Container/container';
+@import './Header/header';
+@import './Skills/skills';
+
+@import './Contact/contact';
 @import 'footer';
+
+
+
+
+@import './Container/container.less';
+@import './Container/800media.less';
+@import './Container/1919media.less';
+@import './Container/1121media.less';
+
+
+@import './Experience/experience.less';
+@import './Experience/800media.less';
+@import './Experience/1919media.less';
+
+
+@import './Header/800media.less';
+@import './Header/1919media.less';
+@import './Header/1121media.less';
+@import './Header/1470media.less';
+
+
+
+@import './Skills/800media.less';
+@import './Skills/1919media.less';
+
+@import './Education/education.less';
+@import './Education/1919media.less';
