--- a/less/mixins.less
+++ b/less/mixins.less
@@ -6,7 +6,7 @@
 
 .colormix2() {
     background-image: linear-gradient(rgb(224, 184, 228), white);
-    box-shadow: 2px 5px 20px;
+    // box-shadow: 2px 5px 20px;
     color:black ;
 }
 
