--- a/less/variables.less
+++ b/less/variables.less
@@ -1,6 +1,6 @@
-@smallPhone: ~ "(max-width: 320px)";
-@phone400: ~ "(min-width: 400px)";
-@phone500: ~ "(min-width: 500px)";
+
 @tablet800: ~ "(min-width: 800px )";
-@desktop: ~ "(min-width: 1024px )";
-@largeDesktop: ~ "(min-width: 1920px)";
+@desktop1121: ~ "(min-width: 1121px )";
+@desktop1470: ~ "(min-width: 1470px )";
+@desktop1537: ~ "(min-width: 1537px )";
+@desktop1919: ~ "(min-width: 1919px )";
