--- a/less/Education/education.less
+++ b/less/Education/education.less
@@ -1,55 +1,67 @@
-//experience
-.experience-section{
-    .middle-cards(linear-gradient(white, rgb(224, 184, 228))); 
-    box-shadow: 2px 5px 20px;
-    color: black;
+//education
+
+#education{
+    height: 320px;
+}
+
+
+.education-section{
+    .middle-cards(linear-gradient(rgb(224, 184, 228), white));
+    // box-shadow: 2px 5px 20px;
+    color:black;
+
     h2{
-        margin-top:28px;
+        margin-top:25px;
         color:black;
         font-size: 3rem;
         font-weight: bolder;
     }
-    
 }
 
 
-.experience{
-    width:100%;
+
+.education{
+    width: 70%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    .exper{
-        width:70%;
+
+    .edu{
+        .each-card();
+        margin-top: 18px;
+        padding: 15px 0 0px 0;
+        height: 90%;
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding-top: 15px;
         // .colormix1();
+        box-shadow: 2px 5px 20px;
+        color:black;
+        
         h4 {
             font-size: 1.1rem;
             color:black;
             font-weight: bold;
+            
         }
+
         h3 {
             font-size: .9rem;
             font-weight: 550;
             color:black;
             padding: 5px 0 10px 0;
         }
-        p {
-            color:black
-        }
+
         ul{
-            width: 100%;
+            width: 80%;
            color:black;
-           display: flex;
-           flex-direction: column;
-           justify-content: center;
-           align-items: center;
+           
            li{
             padding-bottom: 5px;
             list-style-type: circle;
            }
         }
     }
+
 }
+
