--- a/less/Experience/experience.less
+++ b/less/Experience/experience.less
@@ -1,61 +1,62 @@
-//education
-.education-section{
-    .middle-cards(linear-gradient(rgb(224, 184, 228), white));
-    box-shadow: 2px 5px 20px;
-    color:black;
+//experience
+#experience{
+    height: 360px;
+}
 
+
+.experience-section{
+    .middle-cards(linear-gradient(white, rgb(224, 184, 228))); 
+    // box-shadow: 2px 5px 20px;
+    color: black;
     h2{
-        margin-top:25px;
+        margin-top:28px;
         color:black;
         font-size: 3rem;
         font-weight: bolder;
     }
+    
 }
 
 
-
-.education{
+.experience{
     width:100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-
-    .edu{
-        .each-card();
-        margin-top: 18px;
-        padding: 15px 0 0px 0;
-        height: 90%;
+    .experience-box{
+        box-shadow: 2px 5px 20px;
+        margin-top: 20px;
+        width: 95%;
         display: flex;
         flex-direction: column;
         align-items: center;
+        padding: 15px 10px 0 10px;
         // .colormix1();
-        box-shadow: 2px 5px 20px;
-        color:black;
-        
         h4 {
             font-size: 1.1rem;
             color:black;
             font-weight: bold;
-            
         }
-
         h3 {
             font-size: .9rem;
             font-weight: 550;
             color:black;
             padding: 5px 0 10px 0;
         }
-
+        p {
+            color:black
+        }
         ul{
-            width: 80%;
+            width: 100%;
            color:black;
-           
+           display: flex;
+           flex-direction: column;
+           justify-content: center;
+           align-items: center;
            li{
             padding-bottom: 5px;
-            list-style-type: circle;
+            
            }
         }
     }
-
 }
-
