--- a/less/Header/1919media.less
+++ b/less/Header/1919media.less
@@ -1,12 +1,17 @@
 //header
 @media @desktop1919 {
     .info-container {
+        p {
+            font-size: 4em;
+        }
         .mypic {
             img {
                 display: inline;
                 max-width: 40%;
             }
+        
         }
+        
 
     }
 }
